--- a/perfumes.html
+++ b/perfumes.html
@@ -17,41 +17,22 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
 
-/* ===== HEADER COMÚN ===== */
-header{
-  position:fixed;top:0;left:0;width:100%;
-  background:var(--color-primary);color:var(--color-background);z-index:1000;
-  transition:all .3s ease;
-}
-.logo-container{
-  display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s;
-}
+/* HEADER */
+header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:#fff;z-index:1000;transition:all .3s ease;}
+.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s;}
 .logo-container img{height:50px;margin-right:10px;}
 .logo-container h1{font-family:var(--font-title);font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
-nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
+nav a{color:#fff;text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
 /* MAIN PERFUMES */
 main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
 h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
-
-/* Grid responsivo */
 .perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
 @media(min-width:1025px){.perfumes{grid-template-columns:repeat(5,1fr)}}
-
-.perfume{
-  background:#fff;
-  border:1px solid var(--color-accent);
-  border-radius:12px;
-  padding:15px;
-  text-align:center;
-  transition:transform .3s,box-shadow .3s;
-  width:100%;
-  max-width:220px;
-  cursor:pointer;
-}
+.perfume{background:#fff;border:1px solid var(--color-accent);border-radius:12px;padding:15px;text-align:center;transition:transform .3s,box-shadow .3s;width:100%;max-width:220px;cursor:pointer;}
 .perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
 .perfume img{width:100%;height:auto;border-radius:12px}
 .perfume h3{margin:10px 0 5px;font-size:1.1rem;font-family: var(--font-title);}
@@ -60,7 +41,7 @@ h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
 
 /* MODAL */
 .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto;padding:20px}
-.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
+.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;pointer-events:auto; z-index:1;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 .modal-left, .modal-right{flex:1;position:relative}
 .modal-left img{width:100%;height:100%;object-fit:cover;display:block;border-radius:12px;}
@@ -68,28 +49,18 @@ h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
 .modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px;font-family: var(--font-title);}
 .modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
 .price{color:#000;font-weight:bold;font-size:1.2rem}
-
-/* Presentaciones ml */
 .ml-options{display:flex;gap:10px;margin:10px 0;}
 .ml-option{flex:1;text-align:center;padding:10px;border:1px solid var(--color-accent);border-radius:20px;cursor:pointer;transition:all .3s;font-size:0.9rem;background:#f9f9f9;color:#333;}
 .ml-option:hover{border-color:#000;}
 .ml-option.active{background:#000;color:#fff;border-color:#000;}
-
-/* Cantidad con botones */
 .quantity-control{display:flex;align-items:center;gap:10px;margin:10px 0;}
 .quantity-btn{background:#000;color:#fff;border:none;width:35px;height:35px;border-radius:50%;font-size:1.2rem;cursor:pointer;transition:all .3s}
 .quantity-btn:hover{background:#333;}
 #quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
-
-/* Botón carrito */
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
-
-/* Cerrar modal */
-.close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#000;cursor:pointer;transition:all .3s}
+.close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#000;cursor:pointer;transition:all .3s;z-index:2;pointer-events:auto;}
 .close:hover{color:#555;}
-
-/* RESPONSIVE MODAL */
 @media(max-width:1024px){
   .modal-content{flex-direction:column;width:95%;}
   .modal-left img{height:280px;object-fit:cover;}
@@ -167,30 +138,26 @@ const perfumes = [
   {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",price60:"$199.00",price120:"$299.00",image:"images/SANTAL.png"},
   {name:"Neblina V Elixir",description:"Intenso, picante, potente.",price60:"$199.00",price120:"$299.00",image:"images/VELIXIR.png"},
   {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",price60:"$199.00",price120:"$299.00",image:"images/BLEU.png"},
-  {name:"Legado",description:"Fresco, leñoso, complejo.",price60:"$199.00",price120:"$299.00",image:"images/CREED.png"},
+  {name:"Legado",description:"Fresco, leñoso, complejo.",price60:"$199.00",price120:"$299.00",image:"images/CREED.png"}
 ];
 
-// Renderizar perfumes
-const perfumesContainer = document.getElementById("perfumesContainer");
-perfumes.forEach((p)=> {
-  const div = document.createElement("div");
-  div.className="perfume";
-  div.innerHTML = `
-    <img src="${p.image}" alt="${p.name}">
-    <h3>${p.name}</h3>
-    <p>${p.description}</p>
-    <p class="price">${p.price120}</p>`;
-  div.addEventListener("click", ()=>openModal(p));
-  perfumesContainer.appendChild(div);
-});
-
-// Modal
+const container = document.getElementById("perfumesContainer");
 const modal = document.getElementById("productModal");
 const closeModal = document.getElementById("closeModal");
 const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
 const modalDescription = document.getElementById("modalDescription");
 const modalPrice = document.getElementById("modalPrice");
+const quantityInput = document.getElementById("quantity");
+
+// Render perfumes
+perfumes.forEach(p=>{
+  const div = document.createElement("div");
+  div.className="perfume";
+  div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price120}</p>`;
+  div.addEventListener("click",()=>openModal(p));
+  container.appendChild(div);
+});
 
 function openModal(product){
   modal.style.display="flex";
@@ -198,14 +165,14 @@ function openModal(product){
   modalTitle.textContent = product.name;
   modalDescription.textContent = product.description;
   modalPrice.textContent = product.price60;
-  document.getElementById("quantity").value = 1; 
+  quantityInput.value = 1;
   document.querySelectorAll(".ml-option").forEach(el=>el.classList.remove("active"));
   document.querySelector(".ml-option").classList.add("active");
 }
+
 closeModal.onclick = ()=> modal.style.display="none";
 window.onclick = (e)=>{if(e.target==modal) modal.style.display="none"}
 
-// Opciones y cantidad
 document.querySelectorAll(".ml-option").forEach(el=>{
   el.addEventListener("click",()=>{
     document.querySelectorAll(".ml-option").forEach(el2=>el2.classList.remove("active"));
@@ -215,11 +182,12 @@ document.querySelectorAll(".ml-option").forEach(el=>{
     modalPrice.textContent = el.dataset.ml==="60ml"?product.price60:product.price120;
   });
 });
-document.getElementById("increase").onclick = ()=> document.getElementById("quantity").value = parseInt(document.getElementById("quantity").value)+1;
-document.getElementById("decrease").onclick = ()=> {
-  let val = parseInt(document.getElementById("quantity").value);
-  if(val>1) document.getElementById("quantity").value=val-1;
-}
+
+document.getElementById("increase").onclick = ()=> quantityInput.value = parseInt(quantityInput.value)+1;
+document.getElementById("decrease").onclick = ()=>{
+  let val = parseInt(quantityInput.value);
+  if(val>1) quantityInput.value=val-1;
+};
 </script>
 
 </body>
