--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>EREBUS - Inicio</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Neblina&display=swap');
-
 :root{
   --color-primary:#000;
   --color-secondary:#555;
@@ -25,8 +24,6 @@ body{
   line-height:1.6;
   padding-top:120px;
 }
-
-/* HEADER */
 header{
   position:fixed;top:0;left:0;width:100%;
   background:var(--color-primary);color:var(--color-background);z-index:1000;
@@ -36,13 +33,9 @@ header{
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family: var(--font-title);}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
-
-/* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
-
-/* HERO - BANNERS */
 .hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
 .banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
 .banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
@@ -54,15 +47,11 @@ nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
   .scroll-indicator{display:block;animation: bounce 1s infinite alternate;}
 }
 @keyframes bounce{0%{transform: translateX(0);}100%{transform: translateX(5px);}}
-
-/* SEARCH */
 .search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
 #clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
 .search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
 .search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
-
-/* ROPA - PRODUCTOS */
 section{padding:4rem 2rem;text-align:center}
 section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
@@ -73,11 +62,7 @@ section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
 .product h3{margin-bottom:.5rem;color:var(--color-secondary); font-family: var(--font-title);}
 .product .price{font-weight:bold;color:var(--color-primary)}
-
-/* FOOTER */
 footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
-
-/* MODAL PERFUMES/ROPA */
 .modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
@@ -97,7 +82,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 #quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
-/* BOTÓN CERRAR ARREGLADO */
 .close{
   position:absolute;
   top:15px;
@@ -133,7 +117,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </style>
 </head>
 <body>
-
 <header id="mainHeader">
   <div class="logo-container">
     <img src="images/LOGOE.png" alt="Logo EREBUS">
@@ -144,18 +127,17 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
       <li><a href="index.html" id="homeLink">Inicio</a></li>
       <li><a href="#ropa">Ropa</a></li>
       <li><a href="perfumes.html" id="perfumesLink">Perfumes</a></li>
+      <li><a href="carrito.html" id="carritoLink">Carrito</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
-
 <section class="hero-banners" id="inicio">
   <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
   <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
   <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
   <span class="scroll-indicator">&#8594; Desliza</span>
 </section>
-
 <div class="search-container">
   <span id="clearBtn">&times;</span>
   <div class="search-bar">
@@ -166,22 +148,18 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
     <input type="text" id="searchInput" placeholder="Buscar productos (solo ropa en esta página)..." />
   </div>
 </div>
-
 <section id="ropa">
   <h2>Nuestra Ropa</h2>
   <div class="products" id="ropaProducts"></div>
 </section>
-
 <section id="contacto">
   <h2>Contacto</h2>
   <p>Email: contacto@tutienda.com</p>
   <p>Tel: +34 600 123 456</p>
 </section>
-
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
-
 <!-- MODAL -->
 <div id="productModal" class="modal">
   <div class="modal-content">
@@ -209,7 +187,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
     </div>
   </div>
 </div>
-
 <script>
 // Productos ropa
 const ropaProducts = [
@@ -218,7 +195,6 @@ const ropaProducts = [
    {id:3,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
    {id:4,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
-
 // Renderizar productos
 const cont = document.getElementById('ropaProducts');
 function renderRopa(list){
@@ -232,7 +208,6 @@ function renderRopa(list){
   });
 }
 renderRopa();
-
 // Buscador
 const searchInput = document.getElementById('searchInput');
 const clearBtn = document.getElementById('clearBtn');
@@ -245,7 +220,6 @@ searchInput.addEventListener('input', ()=>{
   }else{ clearBtn.style.display='none'; renderRopa(); }
 });
 clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
-
 // Header scroll
 const header = document.getElementById('mainHeader');
 let lastY=0;
@@ -254,16 +228,14 @@ window.addEventListener('scroll', ()=>{
   if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
   lastY = y<=0?0:y;
 });
-
 // Nav active
 const navLinks = document.querySelectorAll('nav a');
 const currentPage = window.location.pathname.split("/").pop();
 navLinks.forEach(link=>{
   const linkPage = link.getAttribute('href').split("/").pop();
   if(linkPage===currentPage || (linkPage==="index.html" && currentPage==="")) link.classList.add('active');
-  if(link.id==='perfumesLink') link.classList.add('active'); // Mantener color al ir a perfumes
+  if(link.id==='perfumesLink') link.classList.remove('active');
 });
-
 // Modal
 const modal = document.getElementById("productModal");
 const modalImage = document.getElementById("modalImage");
@@ -276,7 +248,6 @@ const increaseBtn = document.getElementById("increase");
 const quantityInput = document.getElementById("quantity");
 const addCartBtn = document.querySelector(".add-cart");
 const mlOptions = document.querySelectorAll(".ml-option");
-
 function openModal(product){
   modal.style.display="flex";
   modalImage.src = product.image;
@@ -287,10 +258,8 @@ function openModal(product){
   mlOptions.forEach(opt=>opt.classList.remove("active"));
   mlOptions[0].classList.add("active");
 }
-
 modalClose.addEventListener("click", ()=>modal.style.display="none");
 window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
-
 decreaseBtn.addEventListener("click", ()=>{
   let val = parseInt(quantityInput.value);
   if(val>1) quantityInput.value = val-1;
@@ -299,21 +268,48 @@ increaseBtn.addEventListener("click", ()=>{
   let val = parseInt(quantityInput.value);
   quantityInput.value = val+1;
 });
-
 mlOptions.forEach(opt=>{
   opt.addEventListener("click", ()=>{
     mlOptions.forEach(o=>o.classList.remove("active"));
     opt.classList.add("active");
-    modalPrice.textContent = "$220.00"; // Mantener signo pesos
+    modalPrice.textContent = "$220.00";
   });
 });
-
+// --- AGREGAR AL CARRITO UNIVERSAL ---
 addCartBtn.addEventListener("click", ()=>{
-  const cantidad = quantityInput.value;
+  const cantidad = parseInt(quantityInput.value);
   const variant = document.querySelector(".ml-option.active").textContent;
-  alert(`Agregado al carrito: ${modalTitle.textContent} - Talla: ${variant} - Cantidad: ${cantidad}`);
+  window.addToCart({
+    name: modalTitle.textContent,
+    price: modalPrice.textContent,
+    image: modalImage.src,
+    variant: variant,
+    quantity: cantidad
+  });
   modal.style.display="none";
 });
+// UNIVERSAL: agregar al carrito compatible con todas las páginas
+window.addToCart = function(product) {
+  const cartItem = {
+    id: Date.now(),
+    name: product.name,
+    price: parseFloat(String(product.price).replace(/[^0-9.]/g,'')),
+    image: product.image,
+    variant: product.variant,
+    quantity: parseInt(product.quantity)
+  };
+  let cart = JSON.parse(localStorage.getItem('erebus_cart') || '[]');
+  const existingItem = cart.find(item => 
+    item.name === cartItem.name && item.variant === cartItem.variant
+  );
+  if (existingItem) {
+    existingItem.quantity += cartItem.quantity;
+  } else {
+    cart.push(cartItem);
+  }
+  localStorage.setItem('erebus_cart', JSON.stringify(cart));
+  alert(`${cartItem.name} agregado al carrito. Total: ${existingItem ? existingItem.quantity : cartItem.quantity} unidades`);
+};
 </script>
 </body>
 </html>
